non-functional register page added; questions refined

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,12 @@
   <div class="container">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a><img class="papa" src="/space-ship2.png" style="height: 30px; fill: #ecf0f1; margin-top: -5px"> Rocket</a>
+        <a href="/"><img class="logo" src="/space-ship2.png"> Rocket</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="navbar-right">
+        <a style="font-size: 20px; opacity: .8;" href="/register">Register</a>
       </li>
     </ul>
   </div>
