--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,10 +14,10 @@
     <textarea id="response" name="response" maxlength="140" placeholder="Type Response..." onkeyup="keyhandler();" autofocus></textarea>
     <input type="hidden" id="question_id" name="question_id" value="-1">
     </form>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
       <p style="text-align: left"><span id="charCount">0</span>/140</p>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
       <p id="directions">Press Enter to skip</p>
     </div>
   </div>
@@ -28,4 +28,5 @@
     selectRandomQuestion();
   });
 </script> 
+<script src="/selectQuestion.js"></script>
 </html>
