--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a style="font-size: 20px; opacity: .8;" href="/register">Register</a>
+        <a style="font-size: 20px;" id="account" href="/register">Register</a>
       </li>
     </ul>
   </div>
