--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -13,7 +13,7 @@
 
 <ul>
     <% results.forEach(function(r) { %>
-        <li>user_id: <%= r.user_id %> - question_id: <%= r.question_id %> - response: <%= r.response %></li>
+        <li>user_id: <%= r.id %> - email: <%= r.email %> - encrypted_password: <%= r.encrypted_password %></li>
     <% }); %>
 </ul>
 
