--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,7 @@
     <form method="post" action="/submitResponse">
     <textarea id="response" name="response" maxlength="140" placeholder="Type Response..." onkeyup="keyhandler();" autofocus></textarea>
     <input type="hidden" id="question_id" name="question_id" value="-1">
+    <input type="hidden" id="user_id" name="user_id" value="-1">
     </form>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
       <p style="text-align: left"><span id="charCount">0</span>/140</p>
@@ -25,7 +26,14 @@
 </body>
 <script type="text/javascript">
   $(window).load(function(){
+    var ls = localStorage.getItem('rqt_user_id');
+    var user_id = ls || '<%= rqt_user_id %>' || " "
     selectRandomQuestion();
+    if (user_id.length >= 5) {
+      document.getElementById("account").innerHTML = "My Account";
+      document.getElementById("account").href="/"; 
+      localStorage.setItem('rqt_user_id', user_id);
+    }
   });
 </script> 
 <script src="/selectQuestion.js"></script>
