--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,12 +6,14 @@ body{font-family: 'Lato', sans-serif;}
 :-moz-placeholder{color:rgba(44, 62, 80,0.6);}
 ::-moz-placeholder{color:rgba(44, 62, 80,0.6);}
 :-ms-input-placeholder{color:rgba(44, 62, 80,0.6);}
+.centered {text-align: center;}
 .jumbotron {background: #8e44ad; color: white; margin-bottom: 0px; height:100vh;}
   .jumbotron h2{padding-top: 40px;}
   .jumbotron p {text-align:right; color: rgba(44, 62, 80,0.6); max-width: 75%; margin: 1em auto 2em;}
   .navbar + .jumbotron {margin-top: -20px;}
   .jumbotron input{color: #2c3e50; background-color: transparent; border: none; outline: none; font-size: 20pt;}
   .jumbotron textarea{height: 30vh; width: 75vw; color: #d9ccee; background-color: transparent; border: none; outline: none; font-size: 20pt; resize: none;}
+.message {text-align: center; color: #2c3e50; margin-bottom: 20px;font-size: 21px;}
 .navbar{background: #8e44ad; font-size: 25px; font-family: 'Aller_Rg', sans-serif;}
 .navbar a{color: #ecf0f1; background: #8e44ad;}
 .navbar .logo {height: 25px; fill: #ecf0f1; margin-top: -5px;}
