--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,6 +11,8 @@ body{font-family: 'Lato', sans-serif;}
   .jumbotron h2{padding-top: 40px;}
   .jumbotron p {text-align:right; color: rgba(44, 62, 80,0.6); max-width: 75%; margin: 1em auto 2em;}
   .navbar + .jumbotron {margin-top: -20px;}
+  .jumbotron a{font-size: 21px; color: #2c3e50;}
+  .jumbotron a:focus, .jumbotron a:hover{text-decoration: none;}
   .jumbotron input{color: #2c3e50; background-color: transparent; border: none; outline: none; font-size: 20pt;}
   .jumbotron textarea{height: 30vh; width: 75vw; color: #d9ccee; background-color: transparent; border: none; outline: none; font-size: 20pt; resize: none;}
 .message {text-align: center; color: #2c3e50; margin-bottom: 20px;font-size: 21px;}
