--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -28,8 +28,8 @@
     for (var i = 0; i < qidArray.length; i++) {
       document.getElementById(qidArray[i]).innerHTML = questionContentArray[qidArray[i]];
     };
-    document.getElementById("account").innerHTML = "My Account";
-    document.getElementById("account").href="#"; 
+    document.getElementById("account").innerHTML = "Questions";
+    document.getElementById("account").href="/"; 
     // var arr = <%= questions%>;
     // arr.forEach(function(arg) {
     //   console.log(arg.question_id);
