--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,7 +6,7 @@
 
 <body>
 
-  <% include ../partials/nav.ejs %>
+  <% include ../partials/nav-register.ejs %>
 <div class="jumbotron text-center">
   <div class="container">
     <h2>Register</h2>
