--- a/views/pages/please_register.ejs
+++ b/views/pages/please_register.ejs
@@ -8,7 +8,7 @@
 
   <% include ../partials/nav-register.ejs %>
 <div class="jumbotron text-center">
-  <div class="container">
+  <div class="container" id="all" style="display: none;">
     <h2>Register</h2>
     <% if (errorMsg) { %>
     <span class="message"><%= errorMsg  %></span>
