--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -16,6 +16,7 @@
   </div>
 </div>
 </body>
+<!-- On-pageload script added in line for optimization -->
 <script type="text/javascript">
   $(window).load(function(){
     var ls = localStorage.getItem('rqt_user_id');
