--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -20,7 +20,8 @@
   </div>
 </div>
 </body>
-<script src="/questions.js"></script>
+<script src="/scripts/questions.js"></script>
+<!-- On-pageload script added in line for optimization -->
 <script type="text/javascript">
   $(window).load(function(){
     var userQuestions = '<%= qids%>';
