--- a/views/pages/please_register.ejs
+++ b/views/pages/please_register.ejs
@@ -31,5 +31,13 @@
   </div>
 </div>
 </body>
-<script src="/register.js"></script>
+<!-- On-pageload script added in line for optimization -->
+<script type="text/javascript">
+$(document).ready(function(){
+  $( "#all" ).fadeIn( "fast", function() {
+    // Animation complete
+  });
+});
+</script>
+<script src="/scripts/register.js"></script>
 </html>
