--- a/views/partials/nav-feedback.ejs
+++ b/views/partials/nav-feedback.ejs
@@ -7,10 +7,10 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a style="font-size: 20px;" id="account" href="/">Questions</a>
+        <a style="font-size: 20px;" id="account" href="/account">My Account</a>
       </li>
       <li class="navbar-right">
-        <a style="font-size: 20px;" id="feedback" href="/feedback">Feedback</a>
+        <a style="font-size: 20px;" id="account" href="/">Questions</a>
       </li>
     </ul>
   </div>
