--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,6 +9,9 @@
       <li class="navbar-right">
         <a style="font-size: 20px;" id="account" href="/register">Register</a>
       </li>
+      <li class="navbar-right">
+        <a style="font-size: 20px; visibility: hidden;" id="feedback" href="/feedback">Feedback</a>
+      </li>
     </ul>
   </div>
 </nav>
