--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <title>Rocket</title>
 <link rel="shortcut icon" href="/space-ship_black.png">
-<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="/scripts/jquery.min.js"></script>
+<script src="/scripts/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
