about page and refactoring

--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -7,14 +7,14 @@
 <body>
 
   <% include ../partials/nav-account.ejs %>
-<div class="jumbotron text-center">
+<div class="jumbotron text-center bottomless topless">
   <div class="container">
-    <h2 style="padding-top: 0px;margin-top:0px;">My Responses</h2><hr style="width: 300px;">
-    <span class="message">Email: <%= user.email %></span><br>
-    <div style="overflow-x:scroll; height:350px;">
+    <h2 style="padding-top: 0px;margin-top:0px;">My Responses</h2><hr class="width-adjustment">
+    <span class="message">Email: <%= user.email %></span><br><br>
+    <div class="scroll-box">
       <% questions.forEach(function(r) { %>
-          <h3 id="<%= r.question_id %>" style=" opacity: 0.9;">Question</h3>
-          <h4 style="color: #2c3e50;"><%= r.response %></h4>
+          <h3 id="<%= r.question_id %>" class="question-content">Question</h3>
+          <h4 class="dark-color"><%= r.response %></h4>
       <% }); %>
       </div>
   </div>
