--- a/views/partials/nav-about.ejs
+++ b/views/partials/nav-about.ejs
@@ -8,11 +8,11 @@
     </ul>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="nonactive">
-            <a href="/about">About</a>
-          </li>
           <li class="active">
-            <a>Questions</a>
+            <a>About</a>
+          </li>
+          <li class="nonactive">
+            <a href="/">Questions</a>
           </li>
           <li class="nonactive">
             <a id="account" href="/register">Register</a>
