--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,25 +1,55 @@
 @font-face {font-family:"Aller_Rg"; src: url("Aller_Rg.ttf");}
 html{}
 body{font-family: 'Lato', sans-serif; background: #8e44ad;}
+
 ::-moz-selection{color:#2c3e50; text-shadow:none; background-color: transparent;}
 ::selection{color:#2c3e50; text-shadow:none; background-color: transparent;}
 ::-webkit-input-placeholder{color:rgba(44, 62, 80,0.6);}
 :-moz-placeholder{color:rgba(44, 62, 80,0.6);}
 ::-moz-placeholder{color:rgba(44, 62, 80,0.6);}
 :-ms-input-placeholder{color:rgba(44, 62, 80,0.6);}
+
 .centered {text-align: center;}
+.left {text-align: left;}
+.right {text-align:right;}
+
+.dark-color{color: #2c3e50;}
+.hideme{display: none;}
 .jumbotron {background: #8e44ad; color: white; margin-bottom: 0px; height:90vh;}
   .jumbotron h2{padding-top: 40px;}
-  .jumbotron p {text-align:right; color: rgba(44, 62, 80,0.6); max-width: 75%; margin: 1em auto 2em;}
+  .jumbotron p {color: rgba(44, 62, 80, 0.6); max-width: 75%; margin: 1em auto 2em;}
   .navbar + .jumbotron {margin-top: -20px;}
   .jumbotron a{font-size: 21px; color: #2c3e50;}
   .jumbotron a:focus, .jumbotron a:hover{text-decoration: none;}
   .jumbotron input{color: #2c3e50; background-color: transparent; border: none; outline: none; font-size: 20pt;}
   .jumbotron textarea{height: 30vh; width: 75vw; color: #d9ccee; background-color: transparent; border: none; outline: none; font-size: 20pt; resize: none;}
-.message {text-align: center; color: #2c3e50; margin-bottom: 20px;font-size: 21px;}
-.navbar{background: #8e44ad; font-size: 25px; font-family: 'Aller_Rg', sans-serif;}
-.navbar a{color: #ecf0f1; background: #8e44ad;}
-.navbar .logo {height: 25px; fill: #ecf0f1; margin-top: -5px;}
-.nav>li>a:focus, .nav>li>a:hover{background: transparent;}
+.logo-style {font-family: 'Aller_Rg', sans-serif;}
+.width-adjustment{width: 300px;}
 
+/*Account Page*/
+.question-content{opacity: 0.9;}
+.scroll-box{overflow-x:scroll; height:350px;}
+
+/*About Page*/
+.about-description {line-height: 125%;opacity:0.9;}
+
+/*Navigation Bar*/
+.navbar{background: #8e44ad; font-size: 25px; font-family: 'Aller_Rg', sans-serif;}
+.navbar a{color: #ecf0f1; background: #8e44ad; font-size: 20px;}
+.navbar a:focus, .navbar a:hover{text-decoration: none;}
+.navbar .logo {margin-top: 10px; padding-left: 20px;}
+.navbar .logo img{height: 25px; margin-top: -5px;}
+.navbar .logo a{font-size: 25px;}
+.nav>li>a:focus, .nav>li>a:hover{background: transparent;}
+.navbar-collapse>ul>li.active{opacity: 1.0;}
+.navbar-collapse>ul>li.nonactive{opacity: 0.7;}
+.topless{padding-top: 0px;margin-top:0px;}
+.bottomless{padding-bottom: 0px;margin-bottom:0px;}
+
+/*Register Page*/
+.instructions {color: #ecf0f1;}
+.message {text-align: center; color: #2c3e50; margin-bottom: 20px;font-size: 21px;}
+
+/*Questions Page*/
+.feedback-link{opacity:0.6; visibility: hidden;}
 
