--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 
   <% include ../partials/nav.ejs %>
 <div class="jumbotron text-center">
-  <div id="all" style="display: none;" class="container">
+  <div id="all" class="hideme" class="container">
     <h2 id="question" index="">Question</h2>
     <h4 id="errorMsg"></h4>
     <form method="post" action="/submitResponse">
@@ -17,10 +17,10 @@
     <input type="hidden" id="user_id" name="user_id" value="-1">
     </form>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-      <p style="text-align: left"><span id="charCount">0</span>/250</p>
+      <p class="left"><span id="charCount">0</span>/250<br><a class="feedback-link" id="feedback" href="/feedback">Feedback?</a></p>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-      <p id="directions">Press Enter to skip</p>
+      <p class="right" id="directions">Press Enter to skip</p>
     </div>
   </div>
 </div>
@@ -28,6 +28,16 @@
 <!-- On-pageload script added in line for optimization -->
 <script type="text/javascript">
   $(window).load(function(){
+    $.getScript('./scripts/questions.js', function()
+    {
+     var randomIndex = Math.floor(Math.random() * questions.length);
+      var selectedQuestion = questions[randomIndex];
+      document.getElementById("question").innerHTML = selectedQuestion;
+      document.getElementById("question_id").setAttribute("value",randomIndex.toString());
+      $( "#all" ).fadeIn( "fast", function() {
+        // Animation complete
+      });
+    });
     var ls = localStorage.getItem('rqt_user_id');
     var user_id = ls || '<%= rqt_user_id %>' || " "
     if (user_id.length >= 5) {
