--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<title>Rocket</title>
+<title>Duel</title>
 <link rel="shortcut icon" href="/space-ship_black.png">
 <script src="/scripts/jquery.min.js"></script>
 <script src="/scripts/bootstrap.min.js"></script>
