--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,49 +5,195 @@
 </head>
 
 <body>
-
-  <% include ../partials/nav.ejs %>
 <div class="jumbotron text-center">
-  <div id="all" class="hideme" class="container">
-    <h2 id="question" index="">Question</h2>
-    <h4 id="errorMsg"></h4>
-    <form method="post" action="/submitResponse">
-    <textarea id="response" name="response" maxlength="300" placeholder="Type Response..." onkeyup="keyhandler();" autofocus></textarea>
-    <input type="hidden" id="question_id" name="question_id" value="-1">
-    <input type="hidden" id="user_id" name="user_id" value="-1">
-    </form>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-      <p class="left"><span id="charCount">0</span>/250<br><a class="feedback-link" id="feedback" href="/feedback">Feedback?</a></p>
+  <div class="container">
+    <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 centered">
+      <img src="" height="100" id="logo1">
+      <h3>
+      <select id="1" onchange="switchImg(this.value, this.id);">
+        <option value="choose">Select University...</option>
+        <option value="princeton">Princeton University</option>
+        <option value="harvard">Harvard University</option>
+        <option value="brown">Brown University</option>
+        <option value="yale">Yale University</option>
+        <option value="columbia">Columbia University</option>
+        <option value="cornell">Cornell University</option>
+        <option value="dartmouth">Dartmouth University</option>
+        <option value="upenn">University of Pennsylvania</option>
+      </select>
+    </h3>
     </div>
-    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-      <p class="right" id="directions">Press Enter to skip</p>
+    <div class="col-lg-6 col-md-6 col-sm-6 centered">
+      <img src="" height="100" id="logo2">
+      <h3>
+      <select id="2" onchange="switchImg(this.value, this.id);">
+        <option value="choose">Select University...</option>
+        <option value="princeton">Princeton University</option>
+        <option value="harvard">Harvard University</option>
+        <option value="brown">Brown University</option>
+        <option value="yale">Yale University</option>
+        <option value="columbia">Columbia University</option>
+        <option value="cornell">Cornell University</option>
+        <option value="dartmouth">Dartmouth University</option>
+        <option value="upenn">University of Pennsylvania</option>
+      </select>
+    </h3>
+    </div>
+  </div>
+    <br>
+    <div class="row">
+    <h2 style="padding:0px;margin-bottom:0px; margin-top:0px;text-decoration: underline;">Epee</h2>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
+      <h1 id="e1s">0</h1>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <br>
+      <h3>
+      <button class="btn btn-success btn-up" element="e1"><img src="/blue-up.png" height="30"></button>
+      <button class="btn btn-success btn-down" element="e1"><img src="/blue-down.png" height="30"></button>
+      </h3>
+    </div>
+     <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <br>
+      <h3>
+      <button class="btn btn-success btn-up" element="e2"><img src="/blue-up.png" height="30"></button>
+      <button class="btn btn-success btn-down" element="e2"><img src="/blue-down.png" height="30"></button>
+      </h3>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
+      <h1 id="e2s">0</h1>
+    </div>
+    </div>
+    <br>
+    <div class="row">
+    <h2 style="padding:0px;margin-bottom:0px; margin-top:0px;text-decoration: underline;">Foil</h2>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
+      <h1 id="f1s">0</h1>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <br>
+      <h3>
+      <button class="btn btn-success btn-up" element="f1"><img src="/blue-up.png" height="30"></button>
+      <button class="btn btn-success btn-down" element="f1"><img src="/blue-down.png" height="30"></button>
+      </h3>
+    </div>
+     <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <br>
+      <h3>
+      <button class="btn btn-success btn-up" element="f2"><img src="/blue-up.png" height="30"></button>
+      <button class="btn btn-success btn-down" element="f2"><img src="/blue-down.png" height="30"></button>
+      </h3>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
+      <h1 id="f2s">0</h1>
+    </div>
+    </div>
+    <br>
+    <div class="row">
+    <h2 style="padding:0px;margin-bottom:0px; margin-top:0px;text-decoration: underline;">Saber</h2>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
+      <h1 id="s1s">0</h1>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <br>
+      <h3>
+      <button class="btn btn-success btn-up" element="s1"><img src="/blue-up.png" height="30"></button>
+      <button class="btn btn-success btn-down" element="s1"><img src="/blue-down.png" height="30"></button>
+      </h3>
+    </div>
+     <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <br>
+      <h3>
+      <button class="btn btn-success btn-up" element="s2"><img src="/blue-up.png" height="30"></button>
+      <button class="btn btn-success btn-down" element="s2"><img src="/blue-down.png" height="30"></button>
+      </h3>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
+      <h1 id="s2s">0</h1>
+    </div>
     </div>
   </div>
 </div>
 </body>
 <!-- On-pageload script added in line for optimization -->
-<script type="text/javascript">
-  $(window).load(function(){
-    $.getScript('./scripts/questions.js', function()
-    {
-     var randomIndex = Math.floor(Math.random() * questions.length);
-      var selectedQuestion = questions[randomIndex];
-      document.getElementById("question").innerHTML = selectedQuestion;
-      document.getElementById("question_id").setAttribute("value",randomIndex.toString());
-      $( "#all" ).fadeIn( "fast", function() {
-        // Animation complete
-      });
-    });
-    var ls = localStorage.getItem('rqt_user_id');
-    var user_id = ls || '<%= rqt_user_id %>' || " "
-    if (user_id.length >= 5) {
-      document.getElementById("account").innerHTML = "My Account";
-      document.getElementById("account").href="/account?user_id="+user_id;
-      document.getElementById("feedback").style.visibility="visible";
-      localStorage.setItem('rqt_user_id', user_id);
+<script>
+  $('.btn-up').click(function(e){
+    e.preventDefault();
+    fieldName = $(this).attr('data-field');
+    num = $(this).attr('num');
+    var scoreId = $(this).attr('element') + "s"
+    var score = parseInt(document.getElementById(scoreId).innerHTML);
+    var id1 = scoreId.charAt(0) + "1s";
+    var id2 = scoreId.charAt(0) + "2s";
+    var score1 = parseInt(document.getElementById(id1).innerHTML);
+    var score2 = parseInt(document.getElementById(id2).innerHTML);
+    var scoreSum = score1 + score2;
+    if (scoreSum < 9) {
+      document.getElementById(scoreId).innerHTML = score + 1;
+      if (scoreSum + 1 == 9) {
+        score1 = parseInt(document.getElementById(id1).innerHTML);
+        score2 = parseInt(document.getElementById(id2).innerHTML);
+        if (score1 > score2) {
+          document.getElementById(id2).style.color = "#c0392b";
+          document.getElementById(id1).style.color = "#27ae60";
+        }
+        else {
+          document.getElementById(id1).style.color = "#c0392b";
+          document.getElementById(id2).style.color = "#27ae60";
+        }
+      }
+      else {
+        document.getElementById(id2).style.color = "#2c3e50";
+        document.getElementById(id1).style.color = "#2c3e50";
+      }
     }
   });
+
+  $('.btn-down').click(function(e){
+    e.preventDefault();
+    fieldName = $(this).attr('data-field');
+    num = $(this).attr('num');
+    var scoreId = $(this).attr('element') + "s";
+    var score = parseInt(document.getElementById(scoreId).innerHTML);
+    if (score > 0) {
+      document.getElementById(scoreId).innerHTML = score - 1;
+    }
+    var id1 = scoreId.charAt(0) + "1s";
+    var id2 = scoreId.charAt(0) + "2s";
+    var score1 = parseInt(document.getElementById(id1).innerHTML);
+    var score2 = parseInt(document.getElementById(id2).innerHTML);
+    var scoreSum = score1 + score2;
+    if (scoreSum == 9) {
+      if (score1 > score2) {
+        document.getElementById(id2).style.color = "#c0392b";
+        document.getElementById(id1).style.color = "#27ae60";
+      }
+      else {
+        document.getElementById(id1).style.color = "#c0392b";
+        document.getElementById(id2).style.color = "#27ae60";
+      }
+    }
+    else {
+      document.getElementById(id2).style.color = "#2c3e50";
+      document.getElementById(id1).style.color = "#2c3e50";
+    }
+  });
+
+function switchImg(key, selectId) {
+  var srcArray = {
+    "choose" : "/transparent.png",
+    "princeton" : "https://upload.wikimedia.org/wikipedia/en/thumb/7/71/Princeton_shield.svg/804px-Princeton_shield.svg.png",
+    "harvard" : "https://upload.wikimedia.org/wikipedia/en/8/8e/Harvard_shield-University.png",
+    "brown" : "http://students.brown.edu/Freethought/BrownFreethought.png",
+    "yale" : "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Yale_Logo.svg/2000px-Yale_Logo.svg.png",
+    "columbia" : "http://www.logodekho.com/wp-content/uploads/2015/06/Columbia.edu-Logo.png",
+    "cornell" : "http://www.winterparkcrew.com/wp-content/uploads/2013/07/cornell_university.png",
+    "dartmouth" : "https://upload.wikimedia.org/wikipedia/en/thumb/e/e4/Dartmouth_College_shield.svg/220px-Dartmouth_College_shield.svg.png",
+    "upenn" : "https://www.math.upenn.edu/~rimmer/penn.gif"
+  };
+  var imgSrc = srcArray[key];
+  document.getElementById("logo"+selectId).src = imgSrc;
+}
 </script>
-<script src="/scripts/questions.js"></script> 
-<script src="/scripts/selectQuestion.js"></script>
 </html>
