--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -183,14 +183,14 @@
 function switchImg(key, selectId) {
   var srcArray = {
     "choose" : "/transparent.png",
-    "princeton" : "https://upload.wikimedia.org/wikipedia/en/thumb/7/71/Princeton_shield.svg/804px-Princeton_shield.svg.png",
-    "harvard" : "https://upload.wikimedia.org/wikipedia/en/8/8e/Harvard_shield-University.png",
-    "brown" : "http://students.brown.edu/Freethought/BrownFreethought.png",
-    "yale" : "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Yale_Logo.svg/2000px-Yale_Logo.svg.png",
-    "columbia" : "http://www.logodekho.com/wp-content/uploads/2015/06/Columbia.edu-Logo.png",
-    "cornell" : "http://www.winterparkcrew.com/wp-content/uploads/2013/07/cornell_university.png",
-    "dartmouth" : "https://upload.wikimedia.org/wikipedia/en/thumb/e/e4/Dartmouth_College_shield.svg/220px-Dartmouth_College_shield.svg.png",
-    "upenn" : "https://www.math.upenn.edu/~rimmer/penn.gif"
+    "princeton" : "/logos/princeton.png",
+    "harvard" : "/logos/harvard.png",
+    "brown" : "/logos/brown.png",
+    "yale" : "/logos/yale.png",
+    "columbia" : "/logos/columbia.png",
+    "cornell" : "/logos/cornell.png",
+    "dartmouth" : "/logos/dartmouth.png",
+    "upenn" : "/logos/upenn.gif"
   };
   var imgSrc = srcArray[key];
   document.getElementById("logo"+selectId).src = imgSrc;
