--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-6 centered">
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
       <img src="" height="100" id="logo1">
       <h3>
       <select id="1" onchange="switchImg(this.value, this.id);">
@@ -24,7 +24,13 @@
       </select>
     </h3>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 centered">
+    <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <h1 id="s1" style="font-size: 100px">0</h1>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 centered">
+      <h1 id="s2" style="font-size: 100px">0</h1>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 centered">
       <img src="" height="100" id="logo2">
       <h3>
       <select id="2" onchange="switchImg(this.value, this.id);">
@@ -120,8 +126,6 @@
 <script>
   $('.btn-up').click(function(e){
     e.preventDefault();
-    fieldName = $(this).attr('data-field');
-    num = $(this).attr('num');
     var scoreId = $(this).attr('element') + "s"
     var score = parseInt(document.getElementById(scoreId).innerHTML);
     var id1 = scoreId.charAt(0) + "1s";
@@ -131,6 +135,7 @@
     var scoreSum = score1 + score2;
     if (scoreSum < 9) {
       document.getElementById(scoreId).innerHTML = score + 1;
+      document.getElementById("s"+scoreId.charAt(1)).innerHTML = parseInt(document.getElementById("s"+scoreId.charAt(1)).innerHTML) + 1;
       if (scoreSum + 1 == 9) {
         score1 = parseInt(document.getElementById(id1).innerHTML);
         score2 = parseInt(document.getElementById(id2).innerHTML);
@@ -152,12 +157,11 @@
 
   $('.btn-down').click(function(e){
     e.preventDefault();
-    fieldName = $(this).attr('data-field');
-    num = $(this).attr('num');
     var scoreId = $(this).attr('element') + "s";
     var score = parseInt(document.getElementById(scoreId).innerHTML);
     if (score > 0) {
       document.getElementById(scoreId).innerHTML = score - 1;
+      document.getElementById("s"+scoreId.charAt(1)).innerHTML = parseInt(document.getElementById("s"+scoreId.charAt(1)).innerHTML) - 1;
     }
     var id1 = scoreId.charAt(0) + "1s";
     var id2 = scoreId.charAt(0) + "2s";
