--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <title>Duel</title>
-<link rel="shortcut icon" href="/fencing.png">
+<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/Ivy_League_logo.svg/1280px-Ivy_League_logo.svg.png">
 <script src="/scripts/jquery.min.js"></script>
 <script src="/scripts/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css" />
