--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -122,6 +122,7 @@
     </div>
     <div class="col-lg-2 col-md-2 col-sm-2 centered">
       <h1><span id="ss">0</span>/9</h1>
+      <p style="opacity: 0.5; font-size: 12px;margin-bottom: 0px;">&#169; 2015 Jack Hudson </p>
     </div>
      <div class="col-lg-2 col-md-2 col-sm-2 centered">
       <br>
